# chat-terminal-backend

./: .env.example  .gitignore  README copy.md  README.md  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/pyback/: __init__.py  __main__.py  config.py
src/pyback/application/: chat_context.py  ports.py
src/pyback/domain/: constants.py  exceptions.py  utils.py
src/pyback/infrastructure/: groq_client.py
src/pyback/infrastructure/persistence/: __init__.py  models.py  repos.py  session.py
src/pyback/infrastructure/security/: encryption.py  jwt_service.py  password.py
src/pyback/presentation/: deps.py  main.py  schemas.py  ws_chat.py  ws_manager.py
src/pyback/presentation/routers/: auth.py  chats.py
tests/: test_jwt.py  test_utils.py
